--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ntin-hie-app-ui/node_modules"
   ],
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.4"
   },
   "repository": {
